--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,4 @@ utilities/__pycache__/listRecords.cpython-313.pyc
 utilities/__pycache__/updateRecord.cpython-313.pyc
 utilities/test.py
 utilities/notes.txt
-utilities/instructions.txt
+utilities/instruction.txt
